# DOE_METRICS_REPORTER

./: .env.template  .gitignore  ADMIN_DEPLOYMENT_SUMMARY.md  AGENTS.md  DEPLOYMENT_SUMMARY.md  FINAL_USER_GUIDE.md  GMAIL_SETUP_GUIDE.md  GOOGLE_DOCS_TEST_INSTRUCTIONS.md  HOW_TO_DEPLOY.md  IMPLEMENTATION_SUMMARY.md  NATURAL_LANGUAGE_QA_SUMMARY.md  NERSC_DEPLOYMENT_GUIDE.md  NL_QA_GUIDE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  ROUTING_EXPLAINED.md  USER_ANNOUNCEMENT.md  agent_ask.py.bak  ask_document.py  chat_cborg.py  config.py  deploy_to_nersc.sh  documents_config.yaml  doe_metrics_client.py  explain_routing.py  list_docs.py  llm_summary.py  multi_ask.py  multi_ask_c.py  nersc-ask  pyproject.toml  query_doc.py  query_gmail.py  query_sfapi.py  query_slack.py  quick_ask.sh  requirements.txt  requirements_local.txt  servers.config  (+11 more)
MyNotes/: git_commands.md  notes.md  repo_help.md  syn.md
cache/: __init__.py  cache_manager.py
docs/: ADDING_SERVERS.md  API_CONFIGURATION.md  ARCHITECTURE.md  SETUP.md  USAGE_EXAMPLES.md
models/: __init__.py  base.py  incident.py  job.py  message.py  utilization.py
servers/: __init__.py  google_docs_server.py  server_template.py  sfapi_server.py  slack_server.py  utilization_server.py
tests/: test_cache.py  test_utilization_backend.py
tools/: __init__.py  docs_tool.py  gmail_tool.py  investigation_tool.py  sfapi_tool.py  slack_tool.py  utilization_tool.py
